Converted Project to gradle